<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".Registration_approval"
    android:orientation="horizontal"
    >
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registration_approval"
        android:layout_marginTop="0dp"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="25sp"
        android:background="@color/color1"
        android:textColor="#FFFFFF"/>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:background="#FFFFFF"
        android:stretchColumns="8"


        >

        <TableRow
            android:id="@+id/r1"
            android:background="@color/color3">

            <TextView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/select"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/name"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/mobile_no"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/dob"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/sex"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/batch"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/dept"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="76dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:padding="10dp"
                android:text="@string/user"
                android:textColor="#000000"
                android:textSize="14sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow android:background="#999999">

            <TextView>

            </TextView>

            <TextView>

            </TextView>

            <TextView>

            </TextView>

            <TextView>

            </TextView>

            <TextView>

            </TextView>

            <TextView>

            </TextView>

            <TextView>

            </TextView>

            <TextView>


            </TextView>


        </TableRow>


    </TableLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:id="@+id/ap1"
        android:layout_marginLeft="80dp"
        android:text="@string/approve" />

    <Button
        android:id="@+id/rr1"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginLeft="800dp"

        android:layout_marginTop="300dp"

        android:text="REJECT" />

</RelativeLayout>