<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/rlForgotPass"
    >


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:id="@+id/rlContentMain">



        <TextView
            android:id="@+id/txtEnterMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_pwd"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="25sp"
            android:background="@color/colorPrimary"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/color1"

            android:padding="10dp"
            android:layout_margin="10dp"/>

        <EditText
            android:id="@+id/nuser"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txtEnterMobile"
            android:background="@color/color2"
            android:padding="10dp"

            android:layout_margin="10dp"
            android:textAlignment="center"
            android:maxLines="1"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:hint="@string/user_id"/>

        <EditText
            android:id="@+id/npwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/nuser"
            android:background="@color/color2"
            android:textAlignment="center"
            android:padding="10dp"

            android:layout_margin="10dp"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:hint="@string/enter_new_password"/>
        <EditText
            android:id="@+id/Rnpwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/npwd"
            android:background="@color/color2"
            android:textAlignment="center"
            android:padding="10dp"

            android:layout_margin="10dp"

            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@android:color/black"
            android:hint="@string/confirm_new_password"/>

        <Button
            android:id="@+id/btnForgotNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Rnpwd"
            android:layout_margin="10dp"
            android:padding="10dp"
            android:background="@color/colorPrimary"
            android:textColor="#FFFF"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/next"
           />

    </RelativeLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"/>
</RelativeLayout>