<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"

    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="The American College "
        android:textSize="20sp"


        android:textStyle="bold"
        android:textColor="@color/color1">


    </TextView>
    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="Chennai Alumni Chapter"

        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@color/color1"/>

    <EditText
        android:id="@+id/userid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="120dp"
        android:layout_marginRight="20dp"
        android:background="@color/color2"


        android:drawablePadding="3dp"

        android:hint="User ID"

        android:maxLines="1"
        android:padding="10dp">

    </EditText>

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="20dp"

        android:drawablePadding="3dp"
        android:background="@color/color2"

        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:padding="10dp" >

    </EditText>
    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="#FFFFFF"

        android:text="@string/login"
        android:textAllCaps="false"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/white"
        android:textStyle="bold" />
    <TextView
        android:id="@+id/txtForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"

        android:padding="8dp"
        android:text="@string/forgotpassword"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#000000" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txtRegisterYourself"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textColor="@color/color1"
            android:clickable="true"
            android:focusable="true"

            android:padding="8dp"
            android:text="@string/register_if_you_are_a_new_user"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textAppearance="?android:attr/textAppearanceMedium"
            />

    </RelativeLayout>


</LinearLayout>